# churchtools-api

./: .docker_source_hash  .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  DOCKER-README.md  Dockerfile  Makefile  README.md  REFACTORING_PLAN.md  app.py  build-and-push-docker-image.sh  compose.yml  config.py  docker-cleanup.sh  docker-compose-watchtower.yml  docker-compose.yml  docker-debug.sh  docker-interactive.sh  docker-logs.sh  entrypoint.sh  install-macos.sh  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements-macos.txt  requirements.txt  run-detached.sh  run.py  run.sh  run_docker.sh  run_fastapi.py  run_local_docker.sh  run_tests_in_docker.sh  test_README.md  test_app.py
.github/workflows/: release.yml  test-and-build.yml
.run/: Python tests in tests.run.xml  Python tests.run.xml  Run Application.run.xml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  crud.py  database.py  dependencies.py  logging_config.py  main.py  pdf_generator.py  schemas.py  utils.py  views.py
app/api/: api_endpoints.py  appointments.py  auth.py  events.py  fragments.py  health.py
app/middleware/: csrf.py
app/models/: __init__.py  appointment.py  background_image_setting.py  color_setting.py  logo_setting.py  schemas.py
app/services/: __init__.py  churchtools_client.py  jpeg_generator.py  pdf_generator.py
app/static/css/: appointments.css  common.css  cross-browser.css  events.css  flatpickr-theme.css  login.css  normalize.css  overview.css  prefixed.css
app/static/js/: appointments.js  events.js
app/templates/: agenda.html  appointments.html  error.html  login.html  overview.html  services.html
app/templates/fragments/: appointments.html
app/utils/: __init__.py  helpers.py  logging_config.py
docs/superpowers/plans/: 2026-03-14-ajax-generation.md  2026-03-15-best-practices-improvements.md  2026-03-21-agenda-services.md
docs/superpowers/specs/: 2026-03-14-ajax-generation-design.md  2026-03-15-best-practices-improvements-design.md  (+1 more)
scripts/: preview_pdf.py
static/css/: common.css
templates/: appointments.html  login.html
tests/: README.md  __init__.py  conftest.py  test_appointments.py  test_auth.py  test_config.py  test_csrf.py  test_database.py  test_error_responses.py  test_events.py  test_events_pdf.py  test_health.py  test_logging.py  test_pdf_generator.py  test_pdf_integration.py  test_profile_crud.py  test_schemas.py  test_suite.py  test_utils.py  test_views.py
