[project]
name = "churchtools-api"
version = "2.12.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.1",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:the load_module\\(\\) method is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]  # load_dotenv() must run before app imports
