[project]
name = "churchtools-api"
version = "5.0.3"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.41",
    "sqlalchemy>=2.0.48",
    "pydantic>=2.12",
    "python-multipart>=0.0.22",
    "httpx>=0.28",
    "jinja2>=3.1",
    "python-dotenv>=1.2.2",
    "pdf2image>=1.17",
    "python-dateutil>=2.9",
    "pytz>=2026.1",
    "babel>=2.18",
    "reportlab>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.1",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:the load_module\\(\\) method is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]  # load_dotenv() must run before app imports
