[project]
name = "churchtools-api"
version = "5.0.3"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.42.0",
    "alembic==1.18.4",
    "sqlalchemy==2.0.48",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-multipart==0.0.22",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pdf2image==1.17.0",
    "python-dateutil==2.9.0.post0",
    "babel==2.18.0",
    "reportlab==4.4.10",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:the load_module\\(\\) method is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
